# kairyu

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cuda  LICENSE  PROGRESS.md  README.ja.md  README.md  pyproject.toml
.claude/rules/: progress-log.md
.github/workflows/: ci.yml
bench/: frontier_compare.py  kv_transfer_bench.py  multiturn_prefix.py  orchestration_mock_bench.py  parity_tp.py  pd_mixed.py  router_latency.py  serving_bench.py
deploy/compose/: config.yaml  docker-compose.gpu.yaml  docker-compose.webui.yaml  docker-compose.yaml  gateway-gpu.yaml  gateway.yaml  gpu-replica.multimodel.example.yaml  gpu-replica.yaml  replica.yaml  routing.yaml
docs/: benchmarks.md  deployment.md  gpu-runbook.md  roadmap.md
docs/design/: flashinfer-sm120-aot.md  gpu-day-seams.md  m1-orchestration-and-interface.md  m10-fleet-cpu.md  m11-product.md  m12-model-zoo.md  m13-attention-backend.md  m14-quant-compute.md  m15-moe-mla.md  m16-distributed.md  m17-graphs-drafts.md  m18-kv-transport.md  m19-deploy-packaging.md  m2-engine.md  m20-evaluation-platform.md  m3-spec-decode-and-graphs.md  m4-router-learning.md  m5-intra-node-parallelism.md  m6-inter-node-parallelism.md  m7-productionization.md  m8-engine-cpu.md  m9-truthful-api.md  observability-trace-contract.md
docs/goals/: g2-multi-gpu.md  g3-production-deployment.md  g4-moe-engine.md  g5-fleet-scale.md  g6-product-surface.md
examples/: agent_pool.yaml  agent_pool_max.yaml  basic_offline_inference.py  bench_fugu.yaml  deploy_multi_orchestrator.yaml  run_yaml_pool.py  serve.py
examples/qwen3-32b-multi-gpu/: README.md  benchmark.sh  benchmark_report.py  compose.yaml  kairyu.template.yaml  run-benchmark.sh  run.sh
examples/qwen3-32b-single-gpu/: README.md  compose.yaml  kairyu.yaml  run.sh
kairyu/: __init__.py  outputs.py  sampling_params.py  telemetry.py
kairyu/batch/: __init__.py  envelope.py  store.py  worker.py
kairyu/bench/: __init__.py  aggregate.py  cache.py  cli.py  config.py  docker_probe.py  hub.py  judge.py  judge_prompts.py  runner.py  sandbox.py  store.py  types.py
kairyu/deploy/: __init__.py  builder.py  prober.py  registry.py  spec.py
kairyu/dsl/: __init__.py  decorators.py  loader.py  spec.py
kairyu/engine/: __init__.py  backend.py  engine_loop.py  kairyu_backend.py  mock.py  openai_backend.py  registry.py  tokenizer.py  vllm_backend.py  zmq_backend.py
kairyu/entrypoints/: __init__.py  async_engine.py  chat_template.py  cli.py  llm.py
kairyu/evaluation/: __init__.py  artifacts.py  cli.py  connectors.py  control_store.py  guards.py  profiles.py  protocol.py  references.py  registry.py  reporting.py  safety.py  schemas.py  service.py  sqlite_store.py  worker.py
kairyu/kernels/: __init__.py  awq_gemm_gpu.py  fp8_gemm_gpu.py  nvfp4_gemm_gpu.py
kairyu/models/: __init__.py  attention.py  config.py  eagle.py  layers.py  llama.py  loader.py  mla.py  moe.py  moe_parallel.py  mtp.py  parallel.py
kairyu/orchestration/: __init__.py  budget.py  cluster.py  conductor.py  features.py  kv_index.py  moa.py  orchestrator.py  prefix_index.py  replica.py  router.py  trace.py
kairyu/quant/: __init__.py  awq.py  fp8.py  gptq.py  int8.py  linear.py  nvfp4.py
scripts/: compose_smoke.sh  kind_smoke.sh  parity_real_model.py  validate_compose_binds.py  webui_smoke.sh
scripts/gpu_gates/: 00_env.sh  01_runner.sh  02_quant_bench.sh  03_deferred.sh  06_multigpu.sh  07_multinode.sh  09_production.sh  _lib.sh  check_served_model.py  g4_moe.sh  g5_fleet.sh  record_env.py
tests/bench/: conftest.py  test_bench_agentic.py  test_bench_aggregate.py  test_bench_code_adapters.py  test_bench_config.py  test_bench_download_hf.py  test_bench_download_resilience.py  test_bench_helpers.py  test_bench_judge.py  test_bench_mcq_adapters.py  test_bench_runner.py  test_bench_sandbox.py  test_bench_store.py  test_bench_tau.py  test_prefix_routing_scaling.py
tests/compat/: test_async_engine_compat.py  test_llm_compat.py  test_vllm_backend.py
tests/evaluation/: __init__.py
tests/examples/: test_qwen3_32b_multi_gpu_shell.py
tests/gpu/: test_flashinfer_gpu.py  test_moe_parallel_nccl.py  test_quant_kernels.py
tests/server/: test_auth.py  test_backends.py  test_batches.py  test_chat_parity.py  test_embeddings_models.py  test_health_metrics.py  test_limits.py  test_logprobs_completions_n.py  test_m11_product.py  test_openai_api.py  test_route_preview.py  test_routing_config.py  test_serve_builder.py  test_structured_output_api.py  test_usage_truth.py
(+206 files in other folders)
