[project]
name = "kairyu"
version = "0.1.0"
description = "vLLM-compatible LLM inference framework with native orchestration (Router / Conductor / MoA)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pyyaml>=6",
    "uvicorn>=0.30",
    "prometheus-client>=0.20",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Real-model support (tokenizer/weights); heavy GPU kernels live in the gpu extra.
hf = [
    "tokenizers>=0.20",
    "safetensors>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
    "torch>=2.6",
    "xgrammar>=0.2.3",
    "tokenizers>=0.20",
    "safetensors>=0.5",
]

[project.scripts]
kairyu = "kairyu.entrypoints.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kairyu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=kairyu --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
